Fix root overflow

--- a/src/_global.scss
+++ b/src/_global.scss
@@ -25,7 +25,6 @@ body {
 
 #root {
   height: calc(100vh - 1px);
-  overflow: hidden;
 }
 
 ul,
